@@ -359,13 +359,13 @@ void Direct2dDesign::dragSelectedPoint(double x, double y)
 		m_pSF->extrados()->m_CtrlPoint[n].x = m_MousePos.x;
 		m_pSF->extrados()->m_CtrlPoint[n].y = m_MousePos.y;
 		m_pSF->extrados()->splineCurve();
-		m_pSF->UpdateSplineFoil();
+		m_pSF->updateSplineFoil();
 		if(m_pSF->isSymetric())
 		{
 			m_pSF->intrados()->m_CtrlPoint[n].x = m_MousePos.x;
 			m_pSF->intrados()->m_CtrlPoint[n].y = -m_MousePos.y;
 			m_pSF->intrados()->splineCurve();
-			m_pSF->UpdateSplineFoil();
+			m_pSF->updateSplineFoil();
 		}
 		m_pSF->setModified(true);
 	}
@@ -377,14 +377,14 @@ void Direct2dDesign::dragSelectedPoint(double x, double y)
 			m_pSF->intrados()->m_CtrlPoint[n].x = m_MousePos.x;
 			m_pSF->intrados()->m_CtrlPoint[n].y = m_MousePos.y;
 			m_pSF->intrados()->splineCurve();
-			m_pSF->UpdateSplineFoil();
+			m_pSF->updateSplineFoil();
 
 			if(m_pSF->isSymetric())
 			{
 				m_pSF->extrados()->m_CtrlPoint[n].x =  m_MousePos.x;
 				m_pSF->extrados()->m_CtrlPoint[n].y = -m_MousePos.y;
 				m_pSF->extrados()->splineCurve();
-				m_pSF->UpdateSplineFoil();
+				m_pSF->updateSplineFoil();
 			}
 			m_pSF->setModified(true);
 		}
@@ -411,14 +411,14 @@ void Direct2dDesign::onInsertPt()
 		m_pSF->extrados()->InsertPoint(Real.x,Real.y);
 		m_pSF->extrados()->SplineKnots();
 		m_pSF->extrados()->splineCurve();
-		m_pSF->UpdateSplineFoil();
+		m_pSF->updateSplineFoil();
 	}
 	else
 	{
 		m_pSF->intrados()->InsertPoint(Real.x,Real.y);
 		m_pSF->intrados()->SplineKnots();
 		m_pSF->intrados()->splineCurve();
-		m_pSF->UpdateSplineFoil();
+		m_pSF->updateSplineFoil();
 	}
 
 //	TakePicture();
@@ -445,7 +445,7 @@ void Direct2dDesign::onRemovePt()
 		}
 		m_pSF->extrados()->SplineKnots();
 		m_pSF->extrados()->splineCurve();
-		m_pSF->UpdateSplineFoil();
+		m_pSF->updateSplineFoil();
 	}
 	else
 	{
@@ -459,7 +459,7 @@ void Direct2dDesign::onRemovePt()
 			}
 			m_pSF->intrados()->SplineKnots();
 			m_pSF->intrados()->splineCurve();
-			m_pSF->UpdateSplineFoil();
+			m_pSF->updateSplineFoil();
 		}
 	}
 
