@@ -16,12 +16,13 @@
 
 
 
-xflr5 v6.12 January 2nd, 2016
+xflr5 v6.12 January 9th, 2016
 	- introduced an option to add extra drag to polar objects, to account for surfaces not included in the plane object
 	- restored the plot and export options of the boundary layer graphs after a converged xfoil analysis
 	- modified in depth the constuction of the wing geometry, to better account for flap with large deflections; has an impact on results;
 	- corrected bugs in the import/export operation of body objects to xml files
 	- enabled the LE points of the spline foil to be dragged in Direct Design
+	- corrected a minor error in the construction of the foil's mid camber line; potential small impact on VLM results
 	- corrected other minor things
 
 
